# ROS-Backend-Challenge

./: CMakeLists.txt  README.md  package.xml
behavior_trees/: coverage_through_poses.xml
config/: nav2_params.yaml  slam_toolbox.yaml
launch/: nav.launch.py  slam.launch.py  spawn.launch.py
maps/: arena_map.pgm  arena_map.yaml  coverage_navigator.py
maps/coverage_modules/: __init__.py  map_mixin.py  mission_mixin.py  planner_mixin.py  setup_mixin.py  types.py  ui_mixin.py  visualization_mixin.py
urdf/: robot.urdf
worlds/: arena.sdf  arenagemini.sdf
